--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.1",
+    "socket.io": "^4.8.1"
   }
 }
